@chg 	replaced invocation of constructor of Integer 	by invocation of  Integer.valueOf(int) @bugfix 	added implementation of method setUp() initializing the classes required for tests.
git-svn-id: file:///SVN_Archive/Software/trunk@6826 9b6744e0-6d27-0410-8403-e1b9a971d29b